Add Category/with-menus and Menus/with-options API
