# swagger/v1/swagger.yaml
@@ -8,9 +8,9 @@ paths:
     get:
       summary: Retrieves all categories
       tags:
-        - Categories
+      - Categories
       responses:
-        "200":
+        '200':
           description: categories found
           content:
             application/json:
@@ -38,63 +38,18 @@ paths:
                       type: string
                       format: date-time
                   required:
-                    - id
-                    - name
-                    - status
-                    - created_at
-                    - updated_at
-  "/categories/{id}":
-    get:
-      summary: Retrieves a category by ID
-      tags:
-        - Categories
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-      responses:
-        "200":
-          description: category found
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  id:
-                    type: integer
-                  name:
-                    type: string
-                  status:
-                    type: string
-                  created_by:
-                    type: string
-                    nullable: true
-                  updated_by:
-                    type: string
-                    nullable: true
-                  created_at:
-                    type: string
-                    format: date-time
-                  updated_at:
-                    type: string
-                    format: date-time
-                required:
                   - id
                   - name
                   - status
                   - created_at
                   - updated_at
-        "404":
-          description: category not found
   "/menus":
     get:
       summary: Retrieves all menus
       tags:
-        - Menus
+      - Menus
       responses:
-        "200":
+        '200':
           description: menus found
           content:
             application/json:
@@ -129,26 +84,26 @@ paths:
                       type: string
                       format: date-time
                   required:
-                    - id
-                    - name
-                    - price
-                    - status
-                    - category_id
-                    - created_at
-                    - updated_at
+                  - id
+                  - name
+                  - price
+                  - status
+                  - category_id
+                  - created_at
+                  - updated_at
   "/menus/{id}":
     get:
       summary: Retrieves a menu by ID
       tags:
-        - Menus
+      - Menus
       parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
       responses:
-        "200":
+        '200':
           description: menu found
           content:
             application/json:
@@ -181,28 +136,28 @@ paths:
                     type: string
                     format: date-time
                 required:
-                  - id
-                  - name
-                  - price
-                  - status
-                  - category_id
-                  - created_at
-                  - updated_at
-        "404":
+                - id
+                - name
+                - price
+                - status
+                - category_id
+                - created_at
+                - updated_at
+        '404':
           description: menu not found
   "/categories/{category_id}/menus":
     get:
       summary: Retrieves menus by category ID
       tags:
-        - Menus
+      - Menus
       parameters:
-        - name: category_id
-          in: path
-          required: true
-          schema:
-            type: integer
+      - name: category_id
+        in: path
+        required: true
+        schema:
+          type: integer
       responses:
-        "200":
+        '200':
           description: menus found for category
           content:
             application/json:
@@ -237,130 +192,28 @@ paths:
                       type: string
                       format: date-time
                   required:
-                    - id
-                    - name
-                    - price
-                    - status
-                    - category_id
-                    - created_at
-                    - updated_at
-        "404":
-          description: category not found
-  "/options":
-    get:
-      summary: Retrieves all options
-      tags:
-        - Options
-      responses:
-        "200":
-          description: options found
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                    name:
-                      type: string
-                    description:
-                      type: string
-                      nullable: true
-                    price:
-                      type: number
-                    status:
-                      type: string
-                    menu_id:
-                      type: integer
-                    created_by:
-                      type: string
-                      nullable: true
-                    updated_by:
-                      type: string
-                      nullable: true
-                    created_at:
-                      type: string
-                      format: date-time
-                    updated_at:
-                      type: string
-                      format: date-time
-                  required:
-                    - id
-                    - name
-                    - price
-                    - status
-                    - menu_id
-                    - created_at
-                    - updated_at
-  "/options/{id}":
-    get:
-      summary: Retrieves an option by ID
-      tags:
-        - Options
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: integer
-      responses:
-        "200":
-          description: option found
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  id:
-                    type: integer
-                  name:
-                    type: string
-                  description:
-                    type: string
-                    nullable: true
-                  price:
-                    type: number
-                  status:
-                    type: string
-                  menu_id:
-                    type: integer
-                  created_by:
-                    type: string
-                    nullable: true
-                  updated_by:
-                    type: string
-                    nullable: true
-                  created_at:
-                    type: string
-                    format: date-time
-                  updated_at:
-                    type: string
-                    format: date-time
-                required:
                   - id
                   - name
                   - price
                   - status
-                  - menu_id
+                  - category_id
                   - created_at
                   - updated_at
-        "404":
-          description: option not found
+        '404':
+          description: category not found
   "/menus/{menu_id}/options":
     get:
       summary: Retrieves options by menu ID
       tags:
-        - Options
+      - Options
       parameters:
-        - name: menu_id
-          in: path
-          required: true
-          schema:
-            type: integer
+      - name: menu_id
+        in: path
+        required: true
+        schema:
+          type: integer
       responses:
-        "200":
+        '200':
           description: options found for menu
           content:
             application/json:
@@ -395,17 +248,17 @@ paths:
                       type: string
                       format: date-time
                   required:
-                    - id
-                    - name
-                    - price
-                    - status
-                    - menu_id
-                    - created_at
-                    - updated_at
-        "404":
+                  - id
+                  - name
+                  - price
+                  - status
+                  - menu_id
+                  - created_at
+                  - updated_at
+        '404':
           description: menu not found
 servers:
-  - url: "https://atlas-store.onrender.com"
-    variables:
-      defaultHost:
-        default: "atlas-store.onrender.com"
+- url: http://localhost:3000
+  variables:
+    defaultHost:
+      default: localhost:3000
